# parser

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Python 3.13 (64-bit).lnk  README.MD  README.md  agencies.csv  agency_contacts.py  config.py  dashboard.py  docker-compose.yml  email_sender.py  imoti_agencies_contacts.csv  imoti_agencies_to_sheets.py  mysql_store.py  pyproject.toml  requirements.txt  scraper.py  sheets.py  task  telegram_bot.py  telegram_notifier.py  utils.py  voice.py
.github/workflows/: ci-cd.yml  python-package.yml
app/: __init__.py  scraper_worker.py
app/api/: main.py
app/core/: config.py  logging.py
app/db/: mysql.py
app/models/: domain.py  schemas.py
app/scraping/: __init__.py  contracts.py  engine.py  extractor.py  fallback.py  fetchers.py  html_adapter.py  models.py  site_profiles.py  storage.py  strategies.py  (+1 more)
imoti_scraper/: .env.example  README.md  config.py  email_sender.py  requirements.txt  scraper.py  sheets.py
integrations/: __init__.py  __main__.py  amocrm.py  bitrix24.py  webhooks.py
migrations/: env.py
scripts/: .env.secrets  generate_secrets.sh
tests/: __init__.py  conftest.py  helpers.py  test_api_runtime.py  test_async_scraper.py  test_repository.py  test_repository_scraping.py  test_repository_voice.py  test_runtime_config.py  test_scrape_lock.py  test_scraping_engine.py  test_scraping_extractor.py  test_scraping_golden_fixtures.py  test_scraping_profiles.py  test_voice_contacts.py  test_voice_extractors.py  test_voice_phone.py  test_voice_router.py  test_voice_session.py
(+18 files in other folders)
